# tail-rust

./: .travis.yml  Cargo.toml  appveyor.yml  log.bat  test.sh  write-file.sh
ci/: script.bat  script.sh
scripts/: build-xp.bat  upload.bat
src/: README.md  lib.rs  lib.rs-bak  main.rs  tail.rs
