[package]
name = "tail-rust"
version = "0.1.0"
authors = ["wucong <1875486458@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.1.28"
inotify = "0.7.0"
failure = "0.1.5"
tokio-core = "0.1.17"
tokio = "0.1.22"


[[bin]]
name = "tail"
path = "src/tail.rs"
