[package]
name = "tail-rust"
version = "0.1.0"
authors = ["wucong <1875486458@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.1.28"
failure = "0.1.5"
log = "0.4.8"
simplelog = "0.7.1"
tokio = "0.1.22"
notify = "4.0.13"
bytes = "0.4.12"
tokio-threadpool = "0.1.15"
[target.'cfg(unix)'.dependencies]
inotify = "0.7.0"
